--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
     <include src="./partials/footer.html"></include>
 
     <!-- <include src="./partials/example.html"></include> -->
-    
 
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script type="module" src="./js/slick.min.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
