--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -33,6 +34,5 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="module" src="./js/slick.min.js"></script>
     <script type="module" src="./js/script.js"></script>
-   
   </body>
 </html>
