--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
+  <body data-body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
@@ -33,6 +33,8 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="module" src="./js/slick.min.js"></script>
     <script type="module" src="./js/script.js"></script>
+    <script src="./js/prod-modal.js"></script>
+
    
   </body>
 </html>
