add smooth scroll

--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,6 @@
     <script type="module" src="./js/script.js"></script>
     <script src="./js/prod-modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/scroll.js"></script>
   </body>
 </html>
